samples/_failures_safe/1761368656_3975d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c33fb073.c: In function ‘main’:
./samples/SAFE/__tmp_c33fb073.c:135:49: error: expected ‘)’ at end of input
  135 |         double ratio = (input_size > 0) ? (100.0
      |                                           ~     ^
      |                                                 )
./samples/SAFE/__tmp_c33fb073.c:135:9: error: expected declaration or statement at end of input
  135 |         double ratio = (input_size > 0) ? (100.0
      |         ^~~~~~
./samples/SAFE/__tmp_c33fb073.c:135:9: error: expected declaration or statement at end of input
